--- a/templates/pages/show_venue.html
+++ b/templates/pages/show_venue.html
@@ -74,6 +74,33 @@
 		{% endfor %}
 	</div>
 </section>
-
+<div class="row">
+	<div class="col-sm-6">
+		<button data-id='{{venue.id}}' class="btn btn-danger btn-lg" id='vnu_dlt_btn'>Delete venue</button>
+		<a href="/venues/{{venue.id}}/edit"></a><button data-id='{{venue.id}}' class="btn btn-warning btn-lg">Edit venue</button></a>
+	</div>
+</div>
+<script>
+	document.querySelector('#vnu_dlt_btn').onclick = function(e){
+		e.preventDefault();
+		const venue_id = e.target.dataset['id'];
+		console.log(venue_id)
+		let r = confirm("Are you sure you want to delete this venue?");
+		if (r == true) {
+			fetch('/venues/'+venue_id+'/delete', {
+				method: 'DELETE',
+				body: JSON.stringify({
+					'venue_id': venue_id
+				}),
+				headers: {
+					'Content-Type': 'application/json'
+				}
+			})
+			.catch((error)=>{
+				console.log(error)
+			})
+		}
+	}
+</script>
 {% endblock %}
 
