--- a/templates/forms/edit_venue.html
+++ b/templates/forms/edit_venue.html
@@ -36,6 +36,25 @@
           <label for="genres">Facebook Link</label>
           {{ form.facebook_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
         </div>
+        <div class="form-group">
+          <label for="image_link">Image Link</label>
+          {{ form.image_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+        </div>
+        <div class="form-group">
+          <label for="website">Website</label>
+          {{ form.website(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+        </div>
+        <div class="form-group">
+          <label>Seeking Talent</label>
+          <div class="form-inline">
+            <div class="form-group">
+              {{ form.seeking_talent(class_ = 'form-control', data = true) }}
+            </div>
+            <div class="form-group">
+              {{ form.seeking_description(class_ = 'form-control', placeholder='Seeking Talent Description', autofocus = true) }}
+            </div>
+          </div>
+        </div>
       <input type="submit" value="Edit Venue" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
